# efavanzados

./: 01-Intro.tex  02-CMasMas.tex  03-MFEM.tex  04-OrdenAlto.tex  05-ElementosC1.tex  07-DGhiper.tex  09-HPC.tex  10-EDP_Orden4.tex  11-RefinMalla.tex  9-HPC.tex  README.md  biblio.bib  contenidos.md  efavanza.sty  efavanza.tex  efavanzados.sty  efavanzados.tex
curso-2023/: 00-Intro.tex  01-CMasMas.tex  02-BibliotecasEF.tex  04-OrdenAlto.tex  05-ElementosC1.tex  06-DGelip.tex  07-DGhiper.tex  08-GLSyFC.tex  09-HPC.tex  10-EDP_Orden4.tex  11-RefinMalla.tex  menuavedp.tex  mn_avanzados_edp.sty  mn_avanzados_edp.tex
curso-2023/src/tests-superordenador/: slurm-N1.out  slurm-N2.out
old/curso-2021/: 01-Intro.tex  03-MFEM.tex  06-DGelip.tex  08-GLSyFC.tex  09-HPC.tex  99-apendice.tex  contenidos.md  efavanzados.sty
old/curso-2021/src/: FEniCS-first-example.py
old/curso-2021/src/mfem/: MFEM-first-test.cpp
old/curso-2021/src/tests-superordenador/: diffusion-simple.py  sbatch_script.sh  sbatch_script_FEniCS-DAS.sh  slurm-N4.out  slurm-N8.out
src/mfem/: CMakeLists.txt  MFEM-first-test.cpp
src/tests-refine/: cahn_hilliard_DG_Eyre.py  diffusion-simple.py
src/tests-superordenador/: diffus-sbatch.sh  diffusion-simple.py  sbatch_script_FEniCS-DAS.sh
tmp/c++/: Makefile  ejemplo1.cpp
